--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,12 @@ h1 {
   border-radius: 15px;
   margin-bottom: 10px;
 }
+
+.info {
+  color: #FFF9D2;
+  background: #3B71B2;
+  width: 20%;
+  padding: 0.4% 2%;
+  border-radius: 15px;
+  margin-top: 10px;
+}
