--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@ h1 {
   color: white;
 }
 
+hr.horizontal-separator {
+  border-top: 1px solid #8c8b8b;
+}
+
 .left {
   width: 20%;
   display: inline-block;
