--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@ h1 {
   color: white;
 }
 
+.medication-event-form {
+  background: #67A482; /* green */
+  padding: 4%;
+}
+
 hr.horizontal-separator {
   border-top: 1px solid #8c8b8b;
 }
