--- a/src/App.css
+++ b/src/App.css
@@ -159,6 +159,15 @@ a, a:visited {
   .left {
     width: 40%;
   }
+
+  .button {
+    width: 18%;
+    border-radius: 10px;
+    text-align: center;
+    padding: 1.5%;
+    text-align: center;
+    margin-bottom: 10px;
+  }
 }
 
 /* small screens */
@@ -166,5 +175,18 @@ a, a:visited {
   .left {
     width: 90%;
     margin: 0 auto;
+  }
+
+  .button {
+    width: 8%;
+    border-radius: 10px;
+    text-align: center;
+    padding: 1.5%;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .button span.back-link {
+    display: none;
   }
 }
