--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@ h1 {
   background: #67A482;
 }
 
+.bg-tan {
+  background: #FFE9AC;
+}
+
 .bg-yellow {
   background: #E1F88C;
 }
@@ -37,6 +41,14 @@ h1 {
 
 .mg-top {
   margin-top: 10px;
+}
+
+.flex-container {
+  display: flex;
+}
+
+.flex-space-between {
+  justify-content: space-between;
 }
 
 .quantity input {
@@ -161,12 +173,15 @@ a, a:visited {
   }
 
   .button {
-    width: 18%;
     border-radius: 10px;
     text-align: center;
     padding: 1.5%;
     text-align: center;
     margin-bottom: 10px;
+  }
+
+  .button-wrapper {
+    width: 30%;
   }
 }
 
@@ -178,7 +193,6 @@ a, a:visited {
   }
 
   .button {
-    width: 8%;
     border-radius: 10px;
     text-align: center;
     padding: 1.5%;
@@ -186,6 +200,11 @@ a, a:visited {
     margin-bottom: 10px;
   }
 
+  .button-wrapper {
+    width: 30%;
+  }
+
+  .button span.refresh-button,
   .button span.back-link {
     display: none;
   }
